--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require-dev": {
         "pestphp/pest": "^2.6",
         "pestphp/pest-plugin-laravel": "^2.0",
-        "orchestra/testbench": "^8.5"
+        "orchestra/testbench": "^8.5",
+        "mockery/mockery": "^1.6"
     },
     "autoload": {
         "psr-4": {
